...

    <string name="new_option">new…</string>
    <string name="edit_option">edit…</string>

    <string name="confirm">Confirm</string>
    <string name="ignore">Ignore</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help">Help</string>

    <string name="discard">Discard</string>

    <string name="next">Next</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name= "assistant">Assistant</string>

    <string name="yes">Yes</string>
...
    <plurals name="delete_scripts">
        <item quantity="one">Delete this script?</item>
        <item quantity="other">Delete these scripts?</item>
    </plurals>

    <!-- Dialog Labels -->
    <string name="project_name_label">Project name</string>
    <string name="scene_name_label">Scene name</string>
    <string name="sprite_name_label">Actor or object name</string>
    <string name="sprite_group_name_label">Group name</string>
    <string name="script_group_label">Script group name</string>
    <string name="look_name_label">Look name</string>
    <string name="sound_name_label">Sound name</string>
...
    <string name="undo_sort">Undo sort</string>
    <string name="sort">Sort</string>
    <string name="checkbox">checkbox</string>

    <string name="cm">cm</string>
    <string name="inch">inch</string>
    <string name="frame_size_in_cm">%d x %d cm</string>
    <string name="frame_size_in_inches">%d x %d inches</string>
</resources>

